[package]
name = "ball-game"
version = "0.1.0"
edition = "2021"
description = "This is a ball game."

[dependencies]
bevy= "0.11.0"
rand = "0.8.5"

[[bin]]
name = "ballgame"
path = "src/main.rs"

[package.metadata.bundle]
icon = ["assets/sprites/icon.ico"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["synchapi", "winuser", "consoleapi"] }
