[package]
name = "top-g-simulator"
version = "0.1.0"
edition = "2021"
description = "Spend just a few moments in the life of the TOP G"

[dependencies]
bevy= "0.11.0"
rand = "0.8.5"

[[bin]]
name = "top-g-simulator"
path = "src/main.rs"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
embed-resource = "2.2.0"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
]